--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Everything you need to learn about JWT auth.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server"
   },
   "repository": {
     "type": "git",
