--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1"
   }
 }
