--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,14 @@
   },
   "homepage": "https://github.com/TidbitsJS/jwt-auth#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "helmet": "^5.1.0",
     "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "xss": "^1.0.13"
   }
 }
