--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "helmet": "^5.1.0",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.2",
     "morgan": "^1.10.0",
     "xss": "^1.0.13"
   }
