--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.7",
     "validator": "^13.7.0",
     "xss": "^1.0.13"
   }
